# Repo_Medic

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: INTERVIEW.md  architecture.md
fixtures/cache-bug/: README.md  pyproject.toml
fixtures/cache-bug/src/: cache.py  stats.py
fixtures/cache-bug/tests/: test_cache.py  test_stats.py
fixtures/schema-mismatch/: README.md  pyproject.toml
fixtures/schema-mismatch/src/: api.py  repository.py
fixtures/schema-mismatch/tests/: test_api.py  test_repository.py
repomedic/: __init__.py  cli.py  engine.py  events.py
repomedic/dashboard/: app.py
repomedic/execute/: base.py  docker_executor.py  local_executor.py  parser.py
repomedic/ingest/: detector.py  graph.py
repomedic/investigate/: experiments.py  heuristics.py  provider.py  state_machine.py
repomedic/models/: __init__.py  execution.py  investigation.py  repo.py
repomedic/patch/: applier.py  generator.py  validator.py
repomedic/report/: json_report.py  markdown.py
repomedic/store/: db.py
tests/: test_adversarial.py  test_cli.py  test_dashboard.py  test_docker_executor.py  test_engine_e2e.py  test_events.py  test_execute.py  test_experiments.py  test_heuristics.py  test_ingest.py  test_patch.py  test_state_machine.py  test_store.py  test_validator.py
